# p2p-banxum

./: .dockerignore  .env.example  .gitignore  .importlinter  ADMIN_TODO.md  AGENTS.md  IMPLEMENTATION_PLAN.md  Makefile  SPEC_AUDIT.md  admin_todo_accounts.md  admin_todo_garanta.md  admin_todo_tech.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  server-preflight.yml
backend/: .env.example  Dockerfile  Dockerfile.deploy  __init__.py  manage.py
backend/apps/: __init__.py
backend/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: module-readme-template.md
docs/admin-console/: TODO.md
docs/admin-manual/: README.md  manual-print.html  manual.html
frontend/: .env.example  Dockerfile  Dockerfile.deploy  eslint.config.js  index.html  orval.config.ts  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
openapi/: schema.yaml
plan/: 00_index.md  01_operating_model_compliance.md  02_identity_kyc_kyb_aml.md  03_accounts_auth_access.md  04_investor_portal.md  05_borrower_entity_portal.md  06_admin_operations_portal.md  07_loan_product_catalog.md  08_origination_underwriting.md  09_marketplace_investments.md  10_payments_ledger_custody.md  11_loan_servicing_repayments.md  12_risk_collections_recoveries.md  13_documents_contracting_esign.md  14_communications_notifications.md  15_accounting_tax_finance.md  16_reporting_analytics.md  17_security_privacy_audit.md  18_integrations_api_events.md  19_infrastructure_devops.md  20_qna_workflow.md  21_consistency_review.md
tools/: verify_qr_payload.py
(+407 files in other folders)
